--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "Mantis",
-    "id": "mantis",
+    "name": "Sphinx",
+    "id": "sphinx",
     "packaging_format": 1,
     "description": {
-        "en": "Mantis package for YunoHost.",
-        "fr": "Mantis pour YunoHost."
+        "en": "Sphinx package for YunoHost.",
+        "fr": "Sphinx pour YunoHost."
     },
-    "version": "2.19.0",
-    "url": "https://www.mantisbt.org/",
+    "version": "2.1.2",
+    "url": "https://github.com/sphinx-doc/sphinx",
     "license": "free",
     "maintainer": {
         "name": "liberodark",
@@ -27,8 +27,8 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for Mantis",
-                    "fr": "Choisissez un nom de domaine pour Mantis"
+                    "en": "Choose a domain name for Sphinx",
+                    "fr": "Choisissez un nom de domaine pour Sphinx"
                 },
                 "example": "example.com"
             },
@@ -37,11 +37,11 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for Mantis /mantis is accepted",
-                    "fr": "Choisissez un chemin pour Mantis /mantis est accepté"
+                    "en": "Choose a path for Sphinx /Sphinx is accepted",
+                    "fr": "Choisissez un chemin pour Sphinx /Sphinx est accepté"
                 },
-                "example": "/mantis",
-                "default": "/mantis"
+                "example": "/",
+                "default": "/"
             },
             
             {
