--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
     "id": "sphinx",
     "packaging_format": 1,
     "description": {
-        "en": "Sphinx package for YunoHost.",
-        "fr": "Sphinx pour YunoHost."
+        "en": "Tool that makes it easy to create documentation",
+        "fr": "Outil qui facilite la création de documentation"
     },
-    "version": "2.1.2",
+    "version": "2.1.2~ynh1",
     "url": "https://github.com/sphinx-doc/sphinx",
     "license": "free",
     "maintainer": {
@@ -14,12 +14,12 @@
         "email": "liberodark@gmail.com"
     },
     "requirements": {
-        "yunohost": ">= 2.7.2"
+        "yunohost": ">= 4.0.0"
     },
     "multi_instance": false,
     "services": [
         "nginx",
-        "php5-fpm",
+        "php7.0-fpm",
         "mysql"
     ],
     "arguments": {
@@ -46,16 +46,16 @@
                 "name": "is_public",
                 "type": "boolean",
                 "ask": {
-                    "en": "Is it a public site ?",
+                    "en": "Is it a public site?",
                     "fr": "Est-ce un site public ?"
                 },
-                "default": "true"
+                "default": true
             },
             {
                 "name": "ad_name",
                 "type": "ad_name",
                 "ask": {
-                    "en": "Enter your project name ?",
+                    "en": "Enter your project name?",
                     "fr": "Entrer votre nom de projet ?"
                 },
                 "example": "my project"
@@ -64,7 +64,7 @@
                 "name": "ad_author",
                 "type": "ad_author",
                 "ask": {
-                    "en": "Is it a public site ?",
+                    "en": "Is it a public site?",
                     "fr": "Est-ce un site public ?"
                 },
                 "example": "liberodark"
@@ -73,7 +73,7 @@
                 "name": "ad_lang",
                 "type": "ad_lang",
                 "ask": {
-                    "en": "Is it a public site ?",
+                    "en": "Is it a public site?",
                     "fr": "Est-ce un site public ?"
                 },
                 "choices": ["fr", "es", "en"],
