--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,10 +1,7 @@
-# Force usage of https
-  if ($scheme = http) {
-    rewrite ^ https://$server_name$request_uri? permanent;
-}
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 
 location ^~ __PATH__/ {
-  proxy_pass        http://127.0.0.1:8000;
+  proxy_pass        http://127.0.0.1:__PORT__;
   proxy_redirect    off;
   proxy_set_header  Host $host;
   proxy_set_header  X-Real-IP $remote_addr;
