--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,13 @@
         "fr": "Outil qui facilite la création de documentation"
     },
     "version": "4.4.0~ynh1",
-    "url": "https://github.com/sphinx-doc/sphinx",
+    "url": "https://www.sphinx-doc.org",
+    "upstream": {
+        "license": "free",
+        "website": "https://www.sphinx-doc.org",
+        "admindoc": "https://www.sphinx-doc.org/en/master/contents.html",
+        "code": "https://github.com/sphinx-doc/sphinx"
+    },
     "license": "free",
     "maintainer": {
         "name": "liberodark",
